2005-03-10  Carl Worth  <cworth@cworth.org>

	* TODO: API Shakeup status update.

2005-03-10  Carl Worth  <cworth@cworth.org>

	Originally: 2005-02-24  Carl Worth  <cworth@cworth.org>

	* src/cairo_surface.c (cairo_surface_set_user_data) 
	(cairo_surface_get_user_data): 
	* src/cairo.h: Add const qualifier to cairo_user_data_key_t
	arguments.

	Originally: 2005-02-15  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo_surface.c (cairo_surface_get_data, cairo_surface_set_data):
	Add these two functions to set and get user data on an surface.
	
	* src/cairo.h: Function prototypes for new functions.
	
	* test/user_data.c: Test case for user data functions.

2005-03-09  Carl Worth  <cworth@cworth.org>

	* test/cairo_test.c (cairo_test): Move filename initialization up
	to before first use.

	* test/get_and_set.c: 
	* test/Makefile.am: Add test for the most trivial cairo_get and
	cairo_set functions.

2005-03-09  Carl Worth  <cworth@cworth.org>

	* test/cairo_test.c: (cairo_test):
	* test/cairo_test.h:
	* test/clip_twice.c: (draw):
	* test/coverage.c: (draw):
	* test/fill_rule.c: (draw):
	* test/leaky_polygon.c: (draw):
	* test/line_width.c: (draw):
	* test/linear_gradient.c: (draw):
	* test/move_to_show_surface.c: (draw):
	* test/pixman_rotate.c: (draw):
	* test/text_cache_crash.c: (draw):
	* test/text_rotate.c: (draw): Change the draw function under test
	to return a cairo_test_status_t so that it can indicate test
	failure even if there is no result image.

2005-03-09  Carl Worth  <cworth@cworth.org>

	* TODO: Update API Shakeup planning chart.
	fix typos.

2005-03-09  Carl Worth  <cworth@cworth.org>

	* doc/public/cairo-sections.txt:
	* src/cairo.c: (cairo_get_pattern), (cairo_get_font),
	(cairo_get_font_extents), (cairo_get_operator),
	(cairo_get_rgb_color), (cairo_get_alpha), (cairo_get_tolerance),
	(cairo_get_current_point), (cairo_get_fill_rule),
	(cairo_get_line_width), (cairo_get_line_cap),
	(cairo_get_line_join), (cairo_get_miter_limit), (cairo_get_matrix),